app/assets/styles/setup/04.elements/forms/03.generic-input-geometry.css
:where(html) {
  /* Padding */
  --input-padding-block: 0rem; /* 10px */
  --input-padding-inline: 1.2rem; /* 12px */

  /* With slots */
  --input-padding-inline-with-icon: 3.2rem;

  /* Border settings */
  --form-element-border-width: 0.1rem;
  --form-element-border-bottom-width-underlined: 0.3rem;
  --form-input-border-radius: 0.5rem;
  --form-input-border-radius-underlined: 0.25rem;

  /* Outline settings */
  --form-element-outline-width: 0.1rem;
  --form-element-outline-offset-focus: 0.2rem;

  /* Focus */
  --input-focus-ring-width: 0.2rem; /* 2px */
  --input-focus-ring-offset: 0.2rem;

  /* Underlined variant */
  --input-underline-width: 0.2rem;

  /* Min height */
  --input-min-height: 4.4rem; /* ~40px tap target */
  --input-element-line-height: 3.1;

  /* Element specific */

  /* Textarea */
  --input-textarea-line-height: 1.75;

  /* Select */
  --input-select-option-min-height: 3.6rem;
  --input-select-option-padding-block: 0rem;
  --input-select-option-padding-inline: 1.75rem;

  /* Range */
  --input-range-button-size: 2.8rem;

  /* Checkboxes and Radio buttons */
  --input-checked-element-size: 3rem;
  --input-checked-icon-size: 2.6rem;
  --input-checkbox-decorator-icon-size: 1.2rem;

  /* Toggle Switch */
  --input-toggle-wrapper-padding: 0.1rem;
  --input-toggle-symbol-size: 3rem;
  --input-toggle-symbol-margin: 0.1rem;
  --input-toggle-symbol-border-width: 0.1rem;
  --input-toggle-symbol-outline-width: 0.1rem;
}

